cabal-version:       >=1.24
name:                wti-black76
version:             0.1.0.0
synopsis:            Black-76 pricing + Greeks + Hedgehog tests
license:             BSD3
author:              You
maintainer:          you@example.com
build-type:          Simple

library
  hs-source-dirs: src
  exposed-modules:
      Black76
      HedgeSim
      MojoBridge
  build-depends:
      base
    , aeson
    , bytestring
    , process
  default-language: Haskell2010


test-suite black76-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Black76Tests.hs
  build-depends:       base,
                       hedgehog,
                       statistics,
                       wti-black76
  default-language:    Haskell2010

test-suite wti-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
      HedgeSimSpec
      MojoBridgeSpec
  build-depends:
      base
    , tasty
    , tasty-hunit
    , aeson
    , bytestring
    , process
    , wti-black76
  default-language: Haskell2010


